[project]
name = "malathair-ssm"
version = "1.3.2"
description = "SSH wrapper to simplify life"
authors = [{ name = "malathair", email = "malathair@spectregate.net" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "toml>=0.10.2",
]

[project.scripts]
ssm = "malathair.ssm:main"
ssmconf = "malathair.ssm:configure"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/malathair"]
